# cheakers-engine

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CURRICULUM_LEARNING_README.md  IMPROVEMENTS_SUMMARY.md  WARP.md  agent.md  architecture_and_todo.md  benchmark_improvements.py  benchmark_par_checkpoint.pkl  benchmark_par_model.pkl  benchmark_parallel.py  benchmark_seq.py  benchmark_seq_checkpoint.pkl  benchmark_seq_model.pkl  checkers_gui_tk.py  config.py  curriculum_trainer.py  gameotherother.py  mypy.ini  neural_eval.py  neural_model.pkl  profile_checkpoint.pkl  profile_data.npz  profile_data.pkl  profile_model.pkl  profile_run.py  pyproject.toml  requirements.txt  run_gui.py  selfplay_trainer.py  test_curriculum.py  test_improvements.py  test_integration.py  test_interfaces.py  test_moves.py  todo.md  train.py  training_checkpoint.pkl  training_data.pkl  (+1 more)
.roo/rules-architect/: AGENTS.md
.roo/rules-ask/: AGENTS.md
.roo/rules-code/: AGENTS.md
.roo/rules-debug/: AGENTS.md
.windsurf/rules/: warp.md
checkers/: __init__.py  engine.py  eval.py  moves.py  search.py  types.py
checkers/gui/: __init__.py  board_renderer.py  checkers_ui.py  constants.py  engine_integration.py  factory.py  game_state.py  move_manager.py  tk_app.py  training_integration.py
checkers/training/: curriculum.py  selfplay.py
docs/: README.md
