[project]
name = "checkers-ai"
version = "0.1.0"
requires-python = ">=3.11"

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
line-length = 100
src = ["."]
exclude = [
  ".git",
  "__pycache__",
  ".venv",
  "venv",
  "data",
  "models",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
pretty = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
show_error_codes = true
strict_optional = true
no_implicit_optional = true
disallow_any_generics = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_reexport = true
show_column_numbers = true

[[tool.mypy.overrides]]
module = [
  "cupy.*",
  "torch.*",
  "numba.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
  "checkers.types",
]
disallow_untyped_defs = false
disallow_incomplete_defs = false
